--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Expekto 23 Preperation Phase</title>
-<link rel="icon" href="images/roundfavicon.ico" type="image/icon type">
+<link rel="icon" href="Images/roundfavicon.ico" type="image/icon type">
 
 </head>
 <body>
