--- a/pr.html
+++ b/pr.html
@@ -102,6 +102,21 @@ body {
 
     </header>
 
+
+
+
+
+
+    <main>
+
+       <div class="PR head" style="font-family: 'Brush Script MT', cursive; text-align: center;"><h1>Welcome to the PR team</h1></div> 
+
+       <br><br>
+       <h2 style="padding-left: 18px;">This team is led by <a href="https://www.linkedin.com/in/tushar-kumar-411814221?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAADfT3k0BD5Yg0628DLofqoJ_XoQxoj1plt0&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BNtY7HJ%2F0S32Uff4lxG7sEQ%3D%3D"> Tushar Kumar</a> ME 2nd Year</h2>
+
+
+    </main>
+
     
 </body>
 </html>
