--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <li><a href="task.html">Task</a></li>
                         <li><a href="https://linktr.ee/SACKGEC">Resources</a></li>
                         <!-- <li><a href="details.html">Team</a></li> -->
-                       <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
+                       <li><a href="profiles.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
