updated framework and added few pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <ul class="nav">
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="events.html">Events</a></li>
-                        <li><a href="tpr.html">PR Team</a></li>
+                        <li><a href="pr.html">PR Team</a></li>
                         <li><a href="task.html">Task</a></li>
                         <li><a href="https://linktr.ee/SACKGEC">Resources</a></li>
                         <!-- <li><a href="details.html">Team</a></li> -->
